[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Blob 2.0 Scr/Health.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[node name="Health" type="RigidBody2D"]
collision_layer = 12
collision_mask = 30
contacts_reported = 1
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="lifeTimer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="lifeTimer" to="." method="_on_lifeTimer_timeout"]
